🎯 VERSION ALPHA COMPLÈTE - IA Claudius-Memento + Systèmes Avancés